[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Dashboard.gd" type="Script" id=1]
[ext_resource path="res://assets/images/background.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/buttons/JoinRoomButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/buttons/CreateRoomButton.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 3 )

[node name="Dashboard" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 720.0
margin_bottom = 1284.0
rect_pivot_offset = Vector2( 344.216, 394.477 )
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="."]
margin_top = 4.0
margin_right = 720.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 1 )
text = "Dashboard"
align = 1

[node name="UserDataLabel" type="Label" parent="."]
margin_left = 4.0
margin_top = 1149.0
margin_right = 716.0
margin_bottom = 1276.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "User ID:
Name:"

[node name="RoomIDText" type="TextEdit" parent="."]
margin_left = 369.0
margin_top = 440.0
margin_right = 648.0
margin_bottom = 503.0
custom_fonts/font = SubResource( 3 )
text = "Room ID"

[node name="JoinRoomButton" parent="." instance=ExtResource( 4 )]
margin_left = 371.015
margin_top = 512.356
margin_right = 652.015
margin_bottom = 617.356

[node name="CreateRoomButton" parent="." instance=ExtResource( 5 )]
margin_left = 35.2549
margin_top = 421.38
margin_right = 233.255
margin_bottom = 629.38

[node name="CreateRoomHTTPRequest" type="HTTPRequest" parent="."]

[node name="JoinRoomHTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="JoinRoomButton" to="." method="_on_JoinRoomButton_pressed"]
[connection signal="pressed" from="CreateRoomButton" to="." method="_on_CreateRoomButton_pressed"]
[connection signal="request_completed" from="CreateRoomHTTPRequest" to="." method="_on_CreateRoomHTTPRequest_request_completed"]
[connection signal="request_completed" from="JoinRoomHTTPRequest" to="." method="_on_JoinRoomHTTPRequest_request_completed"]
